overflow fixed

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,10 @@
+body {
+  overflow-x: hidden;
+}
+
 .app {
   background: #fff;
+  
 }
 
 
